--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod --aot=true",
+    "deploy": "npm run build:prod && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ngrx/store": "^6.1.0",
+    "@ngrx/store-devtools": "^6.1.0",
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
