--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
+    "angularfire2": "^5.0.0-rc.11",
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.4.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
